<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_global"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="572dp"
        android:layout_height="138dp"
        android:background="@drawable/menu"
        android:fontFamily="@font/archivo_black"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#7D3B80"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/menu_steauc_corner"
        android:layout_width="92dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/menu_start_button"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:text="@string/start"
        app:backgroundTint="#797D3B80"
        app:layout_constraintBottom_toTopOf="@+id/menu_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:strokeColor="#FF7D3B80"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/menu_settings_button"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:text="@string/settings"
        app:backgroundTint="#797D3B80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        app:strokeColor="#FF7D3B80"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>